[gd_scene load_steps=2 format=3 uid="uid://jp3e6w54jglo"]

[ext_resource type="Script" uid="uid://c58lg6sihij8u" path="res://Lobby/web_socket_client.gd" id="1_4ktdg"]

[node name="Lobby" type="Node"]

[node name="LobbyControls" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1150, 650)
offset_right = 650.0

[node name="Buttons" type="VBoxContainer" parent="LobbyControls"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="LobbyControls/Buttons"]
layout_mode = 2
text = "Join"

[node name="CloseButton" type="Button" parent="LobbyControls/Buttons"]
layout_mode = 2
text = "Close"

[node name="SendButton" type="Button" parent="LobbyControls/Buttons"]
layout_mode = 2
text = "Send"

[node name="RoomCode" type="LineEdit" parent="LobbyControls/Buttons"]
layout_mode = 2
placeholder_text = "ABCD"

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("1_4ktdg")

[connection signal="pressed" from="LobbyControls/Buttons/JoinButton" to="WebSocketClient" method="on_join"]
[connection signal="pressed" from="LobbyControls/Buttons/CloseButton" to="WebSocketClient" method="on_close"]
[connection signal="pressed" from="LobbyControls/Buttons/SendButton" to="WebSocketClient" method="on_send"]
